unpackaged/main/default/objects/Account/fields/dev3_Digitial_ID__c.field-meta.xml
<CustomField>
    <fullName>dev3_Digitial_ID__c</fullName>
    <description>test metadata change</description>
    <label>Digitial ID</label>
    <length>13</length>
    <type>Text</type>
</CustomField>