unpackaged/main/default/objects/Account/fields/EricText__c.field-meta.xml
<CustomField>
    <fullName>EricText__c</fullName>
    <label>EricText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>