unpackaged/main/default/objects/Account/fields/ExternalId_Sameer__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_Sameer__c</fullName>
    <label>ExternalId_Sameer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>