unpackaged/main/default/objects/Account/fields/JeffText__c.field-meta.xml
<CustomField>
    <fullName>JeffText__c</fullName>
    <label>JeffText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>