unpackaged/main/default/objects/Account/fields/Roger_Test_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Roger_Test_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roger Test Checkbox</label>
    <type>Checkbox</type>
</CustomField>